--- a/Css/Index.css
+++ b/Css/Index.css
@@ -1,107 +1,184 @@
-
-.wrapper {
-    margin: auto; /* centralizar */
-    display: flex; /* para transformar em blocos */
-    flex-direction: row;
-    flex-wrap: wrap; /* quando ultilizamos blocos eles ficam um do lado do outro mesmo que não tenha tamanho total da tela, então para resolver isso ultilizamos flex-wrap: wrap */
-    justify-content: center; /* alinhando os blocos na horizontal dentro do principal */
-    align-items: center; /* alinhando os blocos na vertical */
-    width: 100%; /* Largura do Principal */
-    height: auto;
-    padding: 1%; /* espaçamento entre as caixas e o principal */
+.wrapper { /*CONTAINER PRINCIPAL QUE RECEBERÁ AS CAIXAS INTERNAS*/
+    margin:auto; /*centralizar*/
+    display: flex; /*para transformar em blocos*/
+  flex-direction:row; /*Os blocos ficarão em linhas (um do lado do outro). Temos tambem em coluna -> column */
+  flex-wrap: wrap;  /*qdo utilizamos blocos eles ficam um do lado do outro mesmo q tenha tamanho total da tela, entao para resolver isso utilizamos o flex-wrap:wrap */
+    justify-content:center;/*alinhando os blocos na horizontal dentro do principal*/
+  align-items:center; /*alinhando os blocos na vertical */
+    width: 95%; /*Largura do principal*/
+    height:auto; 
+    padding: 0px; /*espaço entre as caixas e o principal*/
 }
 
-/* Logo */
-
 .boxLogo{
-    background-color: #285c89;
-    width: 10%;
-    height: 50%;
+    width: 100%;
+    height: 150px; /*para crescer com o tamanho do conteudo*/
+    padding:0%;
+    text-align: center;
+
+}
+
+.tamanhoLogo{ /*criei uma classe para o tamanho da logo*/
+    width:150px;
+    height: 150px;
+}
+
+.boxMenu{
+    background-color:#5493c9;
+    width: 100%;
+    height: 60px; /*para crescer com o tamanho do conteudo*/
+    padding:0%;
+    text-align: center;  
+    color:white;
+}
+
+.boxBanner{
+    width: 100%;
+    padding-top:2%;
+    text-align: center;
+    color:white;
+}
+
+.tamanhoBanner{ /*classe para tamanho do banner*/
+	width: 100%;
+}
+
+.boxMaisProcurados{ /*frase mais procurados acima dos produtos*/
+    font-family: Copperplate Gothic Light, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    background-color: #1e5d93;
+    text-align: justify;
+    width: 100%;
+    height: 160px; /*para crescer com o tamanho do conteudo*/
+    padding-top: 2%;
+    padding-left: 1%;
+    color: white;
     border-radius: 5px;
 }
 
-.TAMANHOLOGO{
-    width: 100px;
-    height: 50%;
+.Textos{
+    font-size: 20pt;
 }
 
-/* Menu */
+.boxProdutos { /*criando as caixas dos produtos  */
+    background-color:#1111c3;
+    width: 20%;
+    height: 300px; /*para crescer com o tamanho do conteudo*/
+    margin: 0.8%; /*margem ao redor das caixas para ficarem distantes */
+    border-radius: 10px; /*arredondamento*/
+    padding:1%;
+    text-align:justify;
 
-.boxMenu{
-    background-color: #285c89;
-    width: 90%;
-    height: 50%;
-    margin-top: 20px;
+}
+
+.tamanhoProdutos{ /*classe para o tamanho dos produtos mais procurados*/
+    width: 100%;
+    height: auto; 
+}
+
+h1{
+    font-size: 20px;
+    font-family: Century Gothic, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size:40px;
     text-align: center;
-    font-family: 'Calibri', 'Gill Sans MT', 'Gill Sans', 'Trebuchet MS', 'sans-serif';
+
 }
+
+h2{
+    font-family: Century Gothic, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size:20px;
+    text-align: center;
+
+}
+
+.boxBannerFrete{
+    background-color:white;
+    width: 100%;
+    height: auto; /*para crescer com o tamanho do conteudo*/
+    margin: 0%; /*margem ao redor das caixas para ficarem distantes */
+    border-radius: 5px; /*arredondamento*/
+    padding:0%;
+
+}
+
+.tamanhoFrete{ /*classe para o tamanho do banner frete*/
+    width:100%;
+}	
+
+.boxMenuRodape{ /*caixa para o menu do rodape que será chamado 3 vezes para os menus e redes sociais*/
+    background-color:#5493c9;
+    width: 25%;
+    height: 200px; 
+    margin: 0%; /*margem ao redor das caixas para ficarem distantes OU zera pra grudarem */
+    padding:0%;
+    color:white;
+    font-family: Century Gothic, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size:20px;
+}
+
+.boxRodape{
+    background-color: #d8d8d8;
+    width: 100%;
+    height:40px; 
+    font-size:20px;
+    text-align:center;
+    color:white;
+    font-family: Century Gothic, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    padding:1%;
+}
+
+/*MENU*/
 
 nav{
-    max-width: 100%;
-    height: 70px;
+	max-width: 100%; 
+	height: 60px; /*coloque a altura que quiser*/
+	background-color: #5493c9;
+	padding-top:5px;
 }
 
-nav ul{
-    list-style: none;
-    margin: 2px;
-    padding: auto;
-    text-align: center;
+nav ul{ /*formatando o ul para alinhar os botoes que estão dentro dele*/
+	list-style: none; /*retirando a linha abaixo do link*/
+	margin:0px; /*coloque margem se for necessário - espaço por fora*/
+	padding:0px; /*coloque padding se for necessário - espaço por dentro*/
+	text-align:center; /*alinhando os botoes */
 }
 
 nav ul li{
-    /* float:left; nesse caso não pode usa-lo */
-    display: inline-block;
+	display: inline-block;	/*tranformei meu li em blocos para posicionar e alterar margens*/
+    font-family: Century Gothic, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin-right:20px; /*distancia entre os botoes*/
 }
 
-nav ul li a{
-    padding: 20px;
-    margin-right: 10px;
-    margin-top: 5px;
-    text-decoration: none;
-    color: #285c89;
-    display: block;
-    text-align: center;
-    background-color: white;
-    border-radius: 12px;
+nav ul li a{ /*agora vms formatar o link em si*/
+	padding: 15px;
+	text-decoration: none;
+	color: #285c89;
+	display: block;
+	text-align: center;
+	background-color: white; /*cor do botao inicial*/
+    border-radius: 15px; /*borda arredondada*/
+    padding-right: 40px;
+    padding-left: 40px;
 }
 
-nav ul li a:hover{
-    background-color: white;
-    transition: all .5s;
-    border-radius: 20px;
+nav ul li a:hover { /*quando passar o mouse sobre*/
+	background-color: #ecd37a; /*ficará dessa cor quando passar o mouse*/
+	transition: all .5s; /*tempo de transição do efeito*/
+    border-radius: 15px; /*borda arredondada*/
+	font-family: Arial Narrow Bold, sans-serif;
+	color: white;
+}
+
+/*fim do menu*/
+
+/*links do rodape*/
+
+li {
+	display: block;
+}
+
+li a {
+	text-decoration:none;
+    color:white;
 }
 
 
-.boxMaisProcurados{
-    font-size: 36pt;
-    color: white;
-    background-color: #285c89;
-    font-family: 'Copperplate Gothic Light', 'Gill Sans MT', 'Gill Sans', 'Trebuchet MS', 'sans-serif';
-    width: 100%;
-}
-
-/* Menu Rodapé */
-
-.boxMenuRodapé{
-    list-style: none;
-    margin: 2px;
-    padding: auto;
-    text-align: center;
-    color: white;
-    font-family: 'Copperplate Gothic Light', 'Gill Sans MT', 'Gill Sans', 'Trebuchet MS', 'sans-serif';
-}
-
-.boxSigaNos{
-    width: 100%;
-}
-
-/* Rodapé */
-
-.boxRodapé{
-    color: white;
-    font-size: 55pt;
-    background-color: #d8d8d8;
-    width: 100%;
-    text-align: center;
-    font-size: 25px;
-}
